--- a/src/client/style.scss
+++ b/src/client/style.scss
@@ -1,8 +1,25 @@
-html, body {
-  background-color: white;
-  min-width: 700px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
 body{
-  padding:20px;
+	font-family: 'PT Serif', serif;
+}
+.banner{
+	height:300px;
+	width: 100%;
+	background-image: url(https://res.cloudinary.com/kinskin/image/upload/v1569604488/foosballbanner_t2owby);
+	background-size:cover;
+	border-radius: 50px;
+	margin:30px 0 15px 0;
+	p{
+		font-size: 50px;
+		font-weight:bold;
+		margin-left: 20px;
+		height:100%;
+		display:flex;
+		justify-content: flex-start;
+		align-items: center;
+		color:lightcoral;
+	}
+}
+
+.navbar,.content{
+	margin: 20px 0 20px 0;
 }
