--- a/src/client/components/scoreboard/style.scss
+++ b/src/client/components/scoreboard/style.scss
@@ -6,4 +6,11 @@
 }
 .contentBody{
 	margin:20px 0;
+	.teamNameHeader{
+		border-bottom: 2px solid black;
+		margin-bottom: 20px;
+		p{
+			font-size: 20px
+		}
+	}
 }
